# android

./: .classpath  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .project  .sdkmanrc  .travis.yml  AndroidManifest.xml  CHANGELOG.md  CI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  README.md  RELEASE.md  android-debug.apk  build.gradle  codecov.yml  codestyle.xml  debug-keystore.jks  fabric.properties  google-services.json  gradle.properties  justfile  keystore.jks.enc  latest-version.yaml  proguard-project.txt  project.properties  pull-translations.sh  settings.gradle
.beads/: .gitignore
.circleci/: config.yml  continue-config.yml  fdroid-scanner-stub.py
.dependabot/: config.yml
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml  labeler.yml  renovate.json  renovate.json5
.github/google-play-api/: google-play-api.py  pyproject.toml  requirements.txt
.github/workflows/: android.yml  beta.yml  build-and-test.yaml  (+19 more)
DaoGenerator/: build.gradle
apk/: manifest-merger-release-report.txt  mqttitude-0.4.5.apk  mqttitude.apk  owntracks.apk
as/: lint-baseline.xml
docs/: DATA_FLOW_DESIGN.md  PREFERENCES.md
fastlane/: Appfile  Fastfile  Gemfile  README.md
libs/: android-beacon-library-2.0-beta7.aar
lint/: lint-baseline.xml  lint.xml
lost-1.0.1/: build.gradle
project/: .editorconfig  .gitignore  build.gradle  build.gradle.kts  build_on_travis.sh  gradle.properties  settings.gradle  settings.gradle.kts  test.html  testconfig.otrc  tmpclaude-3f91-cwd
util/: backup-test.sh  pull-translations.sh
(+2054 files in other folders)
