[project]
name = "google-play-api"
version = "0.1.0"
description = "Google Play API utilities for OwnTracks Android"
requires-python = ">=3.13"
dependencies = [
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "google-api-core==2.25.1",
    "google-api-python-client==2.185.0",
    "google-auth==2.41.1",
    "google-auth-httplib2==0.2.0",
    "googleapis-common-protos==1.70.0",
    "httplib2==0.30.0",
    "idna==3.11",
    "jmespath==1.0.1",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pyparsing==3.2.3",
    "requests==2.32.5",
    "rsa==4.9.1",
    "six==1.17.0",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
]


[tool.uv]
dev-dependencies = []
